add section prevention

--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
             </div>
         </section>
 
-        <!--<section class="section-slider">-->
-        <!--<div class="swiper-container about-urolesan">-->
-        <!--<div class="swiper-wrapper">-->
-        <!--<div class="swiper-slide">Slide 1</div>-->
-        <!--<div class="swiper-slide">Slide 2</div>-->
-        <!--<div class="swiper-slide">Slide 3</div>-->
-        <!--</div>-->
-        <!--<div class="swiper-pagination"></div>-->
-        <!--</div>-->
-        <!--</section>-->
+        <section class="section-slider">
+        <div class="swiper-container about-urolesan">
+        <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        </div>
+        <div class="swiper-pagination"></div>
+        </div>
+        </section>
 
         <section class="selection-drug">
             <div class="bg-section" style="background-image: url(assets/img/bg-tabletki.png);">
