--- a/index.html
+++ b/index.html
@@ -19,55 +19,57 @@
 <body>
 <div class="wrapper">
     <header class="header">
+
         <div class="container bg_frosted">
             <div class="container-inner">
                 <a href="index.html" class="header__logo">
                     <img class="header__logo-img" src="assets/img/svg/logo-site.svg" alt="">
                 </a>
                 <nav class="header__nav">
+                    <div class="header__nav-inner">
+                        <button class="btn-close round" aria-label="Закрити"></button>
 
-                    <button class="btn-close" aria-label="Закрити"></button>
-
-                    <ul class="menu">
-                        <li class="menu__item">
-                            <a href="./index.html" class="menu__link">Головна</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="./cystitis.html" class="menu__link">Цистит</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="./sand-kidney.html" class="menu__link">Пісок у нирках</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="./urolithiasis.html" class="menu__link">Сечокам’яна хвороба</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="./pyelonephritis.html" class="menu__link">Пієлонефрит</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="./about.html" class="menu__link">Про препарат</a>
-                        </li>
-                    </ul>
-                    <div class="header__nav-bar">
-                        <div class="switch-lang">
-                            <a href="#" class="switch-lang__link active-lang">Укр</a>
-                            <a href="#" class="switch-lang__link">Рус</a>
-                        </div>
-
-                        <ul class="social-list">
-                            <li class="social-list__item">
-                                <a href="#" class="social-list__link">
-                                    <span class="hide">youtube</span>
-                                    <img class="icon" src="assets/img/svg/youtube.svg" alt="youtube">
-                                </a>
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="./index.html" class="menu__link">Головна</a>
                             </li>
-                            <li class="social-list__item">
-                                <a href="#" class="social-list__link">
-                                    <span class="hide">facebook</span>
-                                    <img class="icon" src="assets/img/svg/facebook.svg" alt="facebook">
-                                </a>
+                            <li class="menu__item">
+                                <a href="./cystitis.html" class="menu__link">Цистит</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./sand-kidney.html" class="menu__link">Пісок у нирках</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./urolithiasis.html" class="menu__link">Сечокам’яна хвороба</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./pyelonephritis.html" class="menu__link">Пієлонефрит</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./about.html" class="menu__link">Про препарат</a>
                             </li>
                         </ul>
+                        <div class="header__nav-bar">
+                            <div class="switch-lang">
+                                <a href="#" class="switch-lang__link active-lang">Укр</a>
+                                <a href="#" class="switch-lang__link">Рус</a>
+                            </div>
+
+                            <ul class="social-list">
+                                <li class="social-list__item">
+                                    <a href="#" class="social-list__link">
+                                        <span class="hide">youtube</span>
+                                        <img class="icon" src="assets/img/svg/youtube.svg" alt="youtube">
+                                    </a>
+                                </li>
+                                <li class="social-list__item">
+                                    <a href="#" class="social-list__link">
+                                        <span class="hide">facebook</span>
+                                        <img class="icon" src="assets/img/svg/facebook.svg" alt="facebook">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </nav>
 
@@ -85,6 +87,7 @@
 
             </div>
         </div>
+
     </header>
 
     <div class="backdrop"></div>
@@ -180,7 +183,7 @@
         </div>
         </section>
 
-        <section class="selection-drug">
+        <section class="section-drug">
             <div class="bg-section" style="background-image: url(assets/img/bg-tabletki.png);">
                 <div class="container">
                     <div class="section__heading color_green">
