--- a/single-article.html
+++ b/single-article.html
@@ -105,7 +105,9 @@
                             у практиці сімейного лікаря
                         </h1>
                     </div>
-                    <img src="assets/img/thumb-full.jpg" alt="" class="article__thumb">
+                    <div class="article__thumb">
+                        <img src="assets/img/thumb-full.jpg" alt="">
+                    </div>
                     <div class="dynamic-content">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
