--- a/kit.html
+++ b/kit.html
@@ -137,6 +137,7 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-pagination"></div>
         </div>
     </div>
 
