--- a/cystitis.html
+++ b/cystitis.html
@@ -97,60 +97,61 @@
                     або хронічній формі.
                 </div>
             </div>
+            <div class="swiper-container types-slider">
+                <div class="swiper-wrapper types-cystitis">
+                    <div class="swiper-slide card-types">
+                        <h3 class="card-types__title">Гострий <br>
+                            цистит</h3>
+                        <div class="card-types__content">
+                            <p>
+                                Короткі сечовидні шляхи і їх близьке розташування до кишкового виходу;
+                            </p>
+                            <p>
+                                Кишкові бактерії, що потрапляють в січовий міхур через сечівник;
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="types-cystitis">
-
-                <div class="card-types">
-                    <h3 class="card-types__title">Гострий <br>
-                        цистит</h3>
-                    <div class="card-types__content">
-                        <p>
-                            Короткі сечовидні шляхи і їх близьке розташування до кишкового виходу;
-                        </p>
-                        <p>
-                            Кишкові бактерії, що потрапляють в січовий міхур через сечівник;
-                        </p>
+                    <div class="swiper-slide card-types">
+                        <h3 class="card-types__title">Хронічний
+                            цистит</h3>
+                        <div class="card-types__content">
+                            <p>
+                                Розвивається частіше, ніж три рази на рік або два рази на півріччя;
+                            </p>
+                            <p>
+                                Кишкові бактерії, що потрапляють в січовий міхур через сечівник;
+                            </p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="card-types">
-                    <h3 class="card-types__title">Хронічний
-                        цистит</h3>
-                    <div class="card-types__content">
-                        <p>
-                            Розвивається частіше, ніж три рази на рік або два рази на півріччя;
-                        </p>
-                        <p>
-                            Кишкові бактерії, що потрапляють в січовий міхур через сечівник;
-                        </p>
-                    </div>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
         <section class="symptoms">
             <div class="container">
                 <ul class="symptoms-list">
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon"
-                         style="background-image: url(assets/img/svg/urine1.svg);"></div>
-                    <div class="symptoms-list__text">Сеча часто каламутна
-                        і має неприємний запах
-                    </div>
-                </li>
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon"
-                         style="background-image: url(assets/img/svg/stomach1.svg);"></div>
-                    <div class="symptoms-list__text">Через спазми в нижній частині живота</div>
-                </li>
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon"
-                         style="background-image: url(assets/img/svg/bladder1.svg);"></div>
-                    <div class="symptoms-list__text">Печіння і больові відчуття
-                        при сечовипусканні
-                    </div>
-                </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/urine1.svg);"></div>
+                        <div class="symptoms-list__text">Сеча часто каламутна
+                            і має неприємний запах
+                        </div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/stomach1.svg);"></div>
+                        <div class="symptoms-list__text">Через спазми в нижній частині живота</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/bladder1.svg);"></div>
+                        <div class="symptoms-list__text">Печіння і больові відчуття
+                            при сечовипусканні
+                        </div>
+                    </li>
 
-            </ul>
+                </ul>
             </div>
         </section>
 
