--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         виключно для медичних та фармацевтичних працівників.
                     </div>
                     <div class="wrap-btn">
-                        <a href="member-profile.html" class="btn btn_main">Детальніше</a>
+                        <a href="blog.html" class="btn btn_main">Детальніше</a>
                     </div>
                 </div>
             </div>
