--- a/page-effectiveness.html
+++ b/page-effectiveness.html
@@ -23,7 +23,7 @@
 <div class="wrapper">
 
     <div class="backdrop"></div>
-    <main class="main  page-effectiveness">
+    <main class="main page-product  page-effectiveness">
         <div class="container">
             <a href="index.html" class="link-back">
                 <svg class="icon-back" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
