--- a/page-composition.html
+++ b/page-composition.html
@@ -1,10 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!--зaкрыть индексацию -->
+    <meta name="googlebot" content="noindex, nofollow">
+    <meta name="robots" content="noindex">
+    <meta name="yandex" content="none">
+
+    <title>Ефективність препарату</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/main.css">
+</head>
+
+<body>
+<div class="wrapper">
+
+    <div class="backdrop"></div>
+    <main class="main page-product  page-composition">
+        <div class="container">
+            <a href="index.html" class="link-back">
+                <svg class="icon-back" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19 12H5" stroke="#24243F" stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round"/>
+                    <path d="M12 19L5 12L12 5" stroke="#24243F" stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round"/>
+                </svg>
+                На головну</a>
+
+            <div class="d_flex">
+                <div class="col-4">
+                    <div class="d_flex composition">
+                        <div class="composition__item">
+                            <h5 class="composition__item-title">Дика Морква
+                                <span class="small">
+                                Daucus carota
+                                </span>
+                            </h5>
+                        </div>
+                        <div class="composition__item">
+                            <h5 class="composition__item-title">Олія <br>
+                                М’яти перцевої
+                                <span class="small">
+Oleum Menthae
+piperitae
+                               </span>
+                            </h5>
+                        </div>
+                        <div class="composition__item">
+                            <h5 class="composition__item-title">Олія <br>
+                                Ялиці
+                                <span class="small">
+Oleum Abies
+                               </span>
+                            </h5>
+                        </div>
+                        <div class="composition__item">
+                            <h5 class="composition__item-title"> Шишки <br> Хміля
+                                <span class="small">
+Humulus lupulus
+                               </span>
+                            </h5>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class="tabs">
+                        <div class="tabs__nav">
+                            <div class="tabs__nav-item active">
+                                <a href='#tab1' class="tabs__nav-link active">
+                                    Краплі
+                                </a>
+                            </div>
+                            <div class="tabs__nav-item">
+                                <a href='#tab2' class="tabs__nav-link">
+                                    Капсули
+                                </a>
+                            </div>
+                            <div class="tabs__nav-item">
+                                <a href='#tab3' class="tabs__nav-link">
+                                    Сироп
+                                </a>
+                            </div>
+
+                        </div>
+                        <div class="tabs__content">
+                            <div class="tab-content dynamic-content active" id="tab1">
+                                <h5> Діючі речовини: </h5>
+                                <ul>
+                                    <li>олія ялиці (oleum Abies) - 67,60 мг;</li>
+                                    <li>олія м’яти перцевої (oleum Menthae piperitae) - 16,90 мг;</li>
+                                    <li>морква диких плодів екстракту рідкого (еxtractum fructuum Dauci sativi fluidum)
+                                        (1:1) - 194,35 мг;
+                                    </li>
+                                    <li>хміль шишок екстракту рідкого (еxtractum fructuum Strobili lupuli fluidum) (1:1)
+                                        - 278,80 мг;
+                                    </li>
+                                    <li>материнка трави екстракту рідкого (еxtractum herbae Origani fluidum) (1:1) -
+                                        192,95 мг;
+                                    </li>
+                                </ul>
+
+                                <h5>допоміжні речовини:</h5>
+                                <ul>
+                                    <li>динатрій едетат,</li>
+                                    <li>рицинова олія.</li>
+                                </ul>
+                                <p><strong>
+                                    Рідина від зеленувато-коричневого до коричневого кольору,
+                                    з характерним запахом м’яти.
+                                </strong></p>
+                            </div>
+
+                            <div class="tab-content dynamic-content" id="tab2">
+                                <h5> Діючі речовини: </h5>
+                                <ul>
+                                    <li>олія ялиці (oleum Abies) - 67,60 мг;</li>
+                                    <li>олія м’яти перцевої (oleum Menthae piperitae) - 16,90 мг;</li>
+                                    <li>морква диких плодів екстракту рідкого (еxtractum fructuum Dauci sativi fluidum)
+                                        (1:1) - 194,35 мг;
+                                    </li>
+                                    <li>хміль шишок екстракту рідкого (еxtractum fructuum Strobili lupuli fluidum) (1:1)
+                                        - 278,80 мг;
+                                    </li>
+                                    <li>материнка трави екстракту рідкого (еxtractum herbae Origani fluidum) (1:1) -
+                                        192,95 мг;
+                                    </li>
+                                </ul>
+
+                                <h5>допоміжні речовини:</h5>
+                                <ul>
+                                    <li>динатрій едетат,</li>
+                                    <li>рицинова олія.</li>
+                                </ul>
+                                <p><strong>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                                    beatae corporis debitis deserunt distinctio, dolore fugiat harum
+                                    hic illum impedit in minus neque obcaecati odio perferendis
+                                    perspiciatis quae repellat saepe sed suscipit. Debitis illo
+                                    impedit ipsum iure laboriosam magni nisi.
+                                </strong></p>
+                            </div>
+                            <div class="tab-content dynamic-content" id="tab3">
+                                <h5> Діючі речовини: </h5>
+                                <ul>
+                                    <li>олія ялиці (oleum Abies) - 67,60 мг;</li>
+                                    <li>олія м’яти перцевої (oleum Menthae piperitae) - 16,90 мг;</li>
+                                    <li>морква диких плодів екстракту рідкого (еxtractum fructuum Dauci sativi fluidum)
+                                        (1:1) - 194,35 мг;
+                                    </li>
+                                </ul>
+
+                                <h5>допоміжні речовини:</h5>
+                                <ul>
+                                    <li>динатрій едетат,</li>
+                                    <li>рицинова олія.</li>
+                                </ul>
+                                <p><strong>
+                                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aut debitis,
+                                    dolorum maxime nobis officiis optio repellat repellendus! Soluta?
+                                </strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
+</main>
+
+</div>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="dist/main.js"></script>
 </body>
 </html>
