--- a/page-composition.html
+++ b/page-composition.html
@@ -166,7 +166,7 @@ Humulus lupulus
                                     <li>рицинова олія.</li>
                                 </ul>
                                 <p><strong>
-                                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aut debitis,
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aut debitis,
                                     dolorum maxime nobis officiis optio repellat repellendus! Soluta?
                                 </strong></p>
                             </div>
@@ -175,10 +175,57 @@ Humulus lupulus
                 </div>
             </div>
         </div>
-</div>
 
-</main>
 
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_top">
+
+                <div class="footer_text">
+                    <div class="text-small">
+                        До складу Корпорації "Артеріум" входять АТ "Київмедпрепарат" та АТ "Галичфарм
+                    </div>
+                    <div class="name-corporation">
+                        "Артерїум" Фармацевтична Корпорація
+                    </div>
+                    <a href="#" class="link-site">www.arterium.ua</a>
+                </div>
+
+                <a href="#" class="footer-logo">
+                    <span>Ближче до людей</span>
+                    <img src="assets/img/svg/logo-arterium.svg" alt="" class="">
+                </a>
+
+                <div class="social-bar">
+                    <a href="#" class="social-bar__item">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z"
+                                  fill="#25A3E5"/>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-bar__item">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                  d="M21.8387 5.15941C22.1794 5.51057 22.4213 5.94541 22.5401 6.42C22.8573 8.1787 23.0113 9.96295 23.0001 11.75C23.0064 13.5103 22.8524 15.2676 22.5401 17C22.4213 17.4746 22.1794 17.9094 21.8387 18.2606C21.4981 18.6118 21.0708 18.8668 20.6001 19C18.8801 19.46 12.0001 19.46 12.0001 19.46C12.0001 19.46 5.12008 19.46 3.40008 19C2.9389 18.8738 2.51806 18.6308 2.17823 18.2945C1.83839 17.9581 1.59104 17.5398 1.46008 17.08C1.14285 15.3213 0.988863 13.537 1.00008 11.75C0.991319 9.97631 1.1453 8.20556 1.46008 6.46C1.57887 5.98541 1.8208 5.55057 2.16143 5.19941C2.50206 4.84824 2.92933 4.59318 3.40008 4.46C5.12008 4 12.0001 4 12.0001 4C12.0001 4 18.8801 4 20.6001 4.42C21.0708 4.55318 21.4981 4.80824 21.8387 5.15941ZM15.5 11.75L9.75 15.02V8.47998L15.5 11.75Z"
+                                  fill="#25A3E5"/>
+                        </svg>
+                    </a>
+                </div>
+
+            </div>
+            <div class="footer_bottom">
+                <div class="design">Design by <strong>Profi Creative</strong></div>
+                <div class="copyright">© 2021. Всі права захищені</div>
+            </div>
+        </div>
+        <!--<div class="disclaimer frosted">-->
+        <!--<img class="footer__text-img" src="assets/img/svg/disclaimer.svg"-->
+        <!--alt="Самолікування може бути шкідливим для вашого здоров'я">-->
+        <!--</div>-->
+    </footer>
 </div>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
