add responsive header

--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
                 <div class="copyright">© 2021. Всі права захищені</div>
             </div>
         </div>
-        <!--<div class="disclaimer frosted">-->
-        <!--<img class="footer__text-img" src="assets/img/svg/disclaimer.svg"-->
-        <!--alt="Самолікування може бути шкідливим для вашого здоров'я">-->
-        <!--</div>-->
+        <div class="disclaimer frosted">
+        <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+        alt="Самолікування може бути шкідливим для вашого здоров'я">
+        </div>
     </footer>
 </div>
 
