--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -18,7 +18,77 @@
 
 <body class="body_bg">
 <div class="wrapper">
+    <header class="header">
 
+        <div class="container bg_frosted">
+            <div class="container-inner">
+                <a href="index.html" class="header__logo">
+                    <img class="header__logo-img" src="assets/img/svg/logo-site.svg" alt="">
+                </a>
+                <nav class="header__nav">
+                    <div class="header__nav-inner">
+                        <button class="btn-close round" aria-label="Закрити"></button>
+
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="./index.html" class="menu__link">Головна</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./cystitis.html" class="menu__link">Цистит</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./sand-kidney.html" class="menu__link">Пісок у нирках</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./urolithiasis.html" class="menu__link">Сечокам’яна хвороба</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./pyelonephritis.html" class="menu__link">Пієлонефрит</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="./about.html" class="menu__link">Про препарат</a>
+                            </li>
+                        </ul>
+                        <div class="header__nav-bar">
+                            <div class="switch-lang">
+                                <a href="#" class="switch-lang__link active-lang">Укр</a>
+                                <a href="#" class="switch-lang__link">Рус</a>
+                            </div>
+
+                            <ul class="social-list">
+                                <li class="social-list__item">
+                                    <a href="#" class="social-list__link">
+                                        <span class="hide">facebook</span>
+                                        <img class="icon" src="assets/img/svg/facebook.svg" alt="facebook">
+                                    </a>
+                                </li>
+                                <li class="social-list__item">
+                                    <a href="#" class="social-list__link">
+                                        <span class="hide">youtube</span>
+                                        <img class="icon" src="assets/img/svg/youtube.svg" alt="youtube">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
+                <div class="switch-lang">
+                    <a href="#" class="switch-lang__link">Укр</a>
+                </div>
+                <a href="#" class="header__logo-site">
+                    <img src="assets/img/svg/logo-arterium.svg" alt="логотип arterium">
+                </a>
+                <button type="button" class="btn-burger" aria-label="бургер-меню">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </button>
+
+            </div>
+        </div>
+
+    </header>
     <div class="backdrop"></div>
     <main class="main  page">
         <div class="container">
@@ -91,10 +161,10 @@
                 <div class="copyright">© 2021. Всі права захищені</div>
             </div>
         </div>
-        <!--<div class="disclaimer frosted">-->
-        <!--<img class="footer__text-img" src="assets/img/svg/disclaimer.svg"-->
-        <!--alt="Самолікування може бути шкідливим для вашого здоров'я">-->
-        <!--</div>-->
+        <div class="disclaimer frosted">
+            <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+                 alt="Самолікування може бути шкідливим для вашого здоров'я">
+        </div>
     </footer>
 </div>
 
