--- a/cystitis.html
+++ b/cystitis.html
@@ -92,6 +92,7 @@
     </header>
     <div class="backdrop"></div>
     <main class="main  page">
+
         <div class="container">
             <div class="page__heading frosted">
                 <h1 class="page__title h1">Цистит</h1>
@@ -158,7 +159,53 @@
             </div>
         </section>
 
+        <section class="prevention">
+            <div class="container">
+                <h3 class="prevention__heading heading_xxl">
+                    Заходами профілактики <span class="small">циститу є наступні дії</span>
+                </h3>
+                <div class="prevention__list">
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__text">
+                            Дотримання
+                            правил
+                            гігієни
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                        <div class="prevention__text">
+                            Мінімізувати
+                            вживання алкоголю
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                        <div class="prevention__text">
+                            Правильний раціон
+                            харчування
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon"
+                             style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                        <div class="prevention__text">
+                            Випивати добову
+                            норму води
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__text">
+                            Напівпостільний
+                            режим
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
@@ -204,8 +251,8 @@
             </div>
         </div>
         <div class="disclaimer frosted">
-        <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
-        alt="Самолікування може бути шкідливим для вашого здоров'я">
+            <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+                 alt="Самолікування може бути шкідливим для вашого здоров'я">
         </div>
     </footer>
 </div>
