--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="noindex">
     <meta name="yandex" content="none">
 
-    <title>Сечокам’яна хвороба</title>
+    <title>Пісок у нирках</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./dist/main.css">
@@ -99,8 +99,79 @@
                     це початкова форма нефролітіазу, або сечокам’яної хвороби
                 </div>
             </div>
-
         </div>
+        <section class="symptoms">
+            <div class="container">
+                <ul class="symptoms-list">
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
+                        <div class="symptoms-list__text">Гострий біль у нирках
+                            при сечовипусканні
+                        </div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/nausea1.svg);"></div>
+                        <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/urine1.svg);"></div>
+                        <div class="symptoms-list__text">Кров і частинки
+                            піску в сечі
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="prevention">
+            <div class="container">
+                <h3 class="prevention__heading heading_xxl">
+                    Заходами профілактики <span class="small">циститу є наступні дії</span>
+                </h3>
+                <div class="prevention__list">
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__text">
+                            Дотримання
+                            правил
+                            гігієни
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                        <div class="prevention__text">
+                            Мінімізувати
+                            вживання алкоголю
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                        <div class="prevention__text">
+                            Правильний раціон
+                            харчування
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon"
+                             style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                        <div class="prevention__text">
+                            Випивати добову
+                            норму води
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__text">
+                            Напівпостільний
+                            режим
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
