--- a/kit.html
+++ b/kit.html
@@ -260,132 +260,44 @@
         </div>
     </div>
 
+
     -----------------------------------------------------------------------------------------------
     <br><br><br><br>
     --------------------------------------------------------------------------------------------
 
-    <section class="prevention">
-        <div class="container">
-            <h3 class="prevention__heading heading_xxl">
-                Заходами профілактики <span class="small">циститу є наступні дії</span>
-            </h3>
-            <div class="prevention__list">
-                <div class="prevention__item">
-                    <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
-                    <div class="prevention__text">
-                        Дотримання
-                        правил
-                        гігієни
-                    </div>
-                </div>
-                <div class="prevention__item">
-                    <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
-                    <div class="prevention__text">
-                        Мінімізувати
-                        вживання алкоголю
-                    </div>
-                </div>
-                <div class="prevention__item">
-                    <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
-                    <div class="prevention__text">
-                        Правильний раціон
-                        харчування
-                    </div>
-                </div>
-                <div class="prevention__item">
-                    <div class="prevention__icon"
-                         style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
-                    <div class="prevention__text">
-                        Випивати добову
-                        норму води
-                    </div>
-                </div>
-                <div class="prevention__item">
-                    <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
-                    <div class="prevention__text">
-                        Напівпостільний
-                        режим
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    -----------------------------------------------------------------------------------------------
-    <br><br><br><br>
-    --------------------------------------------------------------------------------------------
-    <div class="container">
-        <ul class="symptoms-list">
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon"
-                     style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
-                <div class="symptoms-list__text">Ниркова колька - різкий біль</div>
-            </li>
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon"
-                     style="background-image: url(assets/img/svg/nausea1.svg);"></div>
-                <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
-            </li>
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon"
-                     style="background-image: url(assets/img/svg/bladder1.svg);"></div>
-                <div class="symptoms-list__text">Відсутність сечовиділення</div>
-            </li>
-
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon" style="background-image: url(assets/img/svg/urine1.svg);"></div>
-                <div class="symptoms-list__text">Кров’яні частинки в сечі</div>
-            </li>
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon"
-                     style="background-image: url(assets/img/svg/weakness1.svg);"></div>
-                <div class="symptoms-list__text">Підвищена слабкість</div>
-            </li>
-            <li class="symptoms-list__item">
-                <div class="symptoms-list__bg-icon"
-                     style="background-image: url(assets/img/svg/low-temperature1.svg);"></div>
-                <div class="symptoms-list__text">Підвищена температура</div>
-            </li>
-
-        </ul>
-    </div>
-    -----------------------------------------------------------------------------------------------
-    <br><br><br><br>
-    --------------------------------------------------------------------------------------------
-
-    <section class="consequences" style="background-image: url(assets/img/bg11.png);">
+    <section class="consequences" style="background-image: url(assets/img/bg112.png);">
         <div class="section__heading color_white">
             <h2 class="heading_h1">
-                Сечокам'яна хвороба, якщо вчасно не надати допомогу,
-                може призвести до більш серйозних наслідків:
+                Ряд ускладнень, які можуть виникнути
+                у пацієнтів будь-якого віку і статі
             </h2>
         </div>
         <ul class="consequences-list text_md">
             <li class="consequences-list__item frosted">
-                Проникнення, розвиток
-                і поширення інфекцій
-            </li>
-            <li class="consequences-list__item frosted">
-                Пієлонефрит та інші захворювання нирок
-            </li>
-            <li class="consequences-list__item frosted">
-                Проблеми з кишечником
-                - зокрема, парез
-            </li>
-            <li class="consequences-list__item frosted">
-                Скупчення
-                гнійних утворень
-            </li>
-            <li class="consequences-list__item frosted">
-                Ниркова <br>
+                ниркова <br>
                 недостатність
             </li>
             <li class="consequences-list__item frosted">
-                Бактеріальний <br>
-                шок
+                зараження <br>
+                крові (сепсис)
+            </li>
+            <li class="consequences-list__item frosted">
+                гнійне ураження <br>
+                нирки (карбункул)
+            </li>
+            <li class="consequences-list__item frosted">
+                гіпертонічні <br>
+                напади
+            </li>
+            <li class="consequences-list__item frosted">
+                рубцювання <br>
+                нирки
+            </li>
+            <li class="consequences-list__item frosted">
+                ксантогрануломатоз нирки
             </li>
         </ul>
-        <div class="block-more-info text_md hide">
+        <div class="block-more-info block-more-info_white text_md hide-info">
             <p>
                 Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
                 постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
@@ -840,6 +752,120 @@
         <!--alt="Самолікування може бути шкідливим для вашого здоров'я">-->
         <!--</div>-->
     </footer>
+    -----------------------------------------------------------------------------------------------
+    <br><br><br><br>
+    --------------------------------------------------------------------------------------------
+
+    <section class="prevention">
+        <div class="container">
+            <h3 class="prevention__heading heading_xxl">
+                Заходами профілактики <span class="small">циститу є наступні дії</span>
+            </h3>
+            <div class="prevention__list">
+                <div class="prevention__item">
+                    <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                    <div class="prevention__text">
+                        Дотримання
+                        правил
+                        гігієни
+                    </div>
+                </div>
+                <div class="prevention__item">
+                    <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                    <div class="prevention__text">
+                        Мінімізувати
+                        вживання алкоголю
+                    </div>
+                </div>
+                <div class="prevention__item">
+                    <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                    <div class="prevention__text">
+                        Правильний раціон
+                        харчування
+                    </div>
+                </div>
+                <div class="prevention__item">
+                    <div class="prevention__icon"
+                         style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                    <div class="prevention__text">
+                        Випивати добову
+                        норму води
+                    </div>
+                </div>
+                <div class="prevention__item">
+                    <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                    <div class="prevention__text">
+                        Напівпостільний
+                        режим
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="block-more-info block-more-info_white text_md hide-info">
+                <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
+                    фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються антибіотики
+                    при
+                    пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+
+                <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                    сечовипускання.
+                    Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку комплексної
+                    терапії ступінь проявів симптомів знижується.</p>
+
+                <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
+                    періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під час
+                    ремісії
+                    обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+
+                <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть виникати
+                    через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь і
+                    на
+                    чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення пієлонефриту.</p>
+            </div>
+            <div class="wrap-btn">
+                <button class="show-more btn btn_glass">Більше інформації</button>
+            </div>
+        </div>
+    </section>
+    -----------------------------------------------------------------------------------------------
+    <br><br><br><br>
+    --------------------------------------------------------------------------------------------
+    <div class="container">
+        <ul class="symptoms-list">
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon"
+                     style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
+                <div class="symptoms-list__text">Ниркова колька - різкий біль</div>
+            </li>
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon"
+                     style="background-image: url(assets/img/svg/nausea1.svg);"></div>
+                <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
+            </li>
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon"
+                     style="background-image: url(assets/img/svg/bladder1.svg);"></div>
+                <div class="symptoms-list__text">Відсутність сечовиділення</div>
+            </li>
+
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon" style="background-image: url(assets/img/svg/urine1.svg);"></div>
+                <div class="symptoms-list__text">Кров’яні частинки в сечі</div>
+            </li>
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon"
+                     style="background-image: url(assets/img/svg/weakness1.svg);"></div>
+                <div class="symptoms-list__text">Підвищена слабкість</div>
+            </li>
+            <li class="symptoms-list__item">
+                <div class="symptoms-list__bg-icon"
+                     style="background-image: url(assets/img/svg/low-temperature1.svg);"></div>
+                <div class="symptoms-list__text">Підвищена температура</div>
+            </li>
+
+        </ul>
+    </div>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="dist/main.js"></script>
