--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="noindex">
     <meta name="yandex" content="none">
 
-    <title>Сечокам’яна хвороба</title>
+    <title>Пієлонефрит</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./dist/main.css">
@@ -90,17 +90,177 @@
 
     </header>
     <div class="backdrop"></div>
-    <main class="main  page">
+    <main class="main  page page-pyelonephritis">
         <div class="container">
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Пісок <br>
-                    у нирках</h1>
+                <h1 class="page__title h1">Пієлонефрит</h1>
                 <div class="page__sub-title heading_h4">
-                    це початкова форма нефролітіазу, або сечокам’яної хвороби
+                    захворювання нирок, що буває одно- або двостороннім і протікає
+                    в гострій або хронічній формі.
                 </div>
             </div>
-
         </div>
+        <section class="symptoms">
+            <div class="container">
+                <ul class="symptoms-list">
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
+                        <div class="symptoms-list__text">Ниркова колька - різкий біль</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/nausea1.svg);"></div>
+                        <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/bladder1.svg);"></div>
+                        <div class="symptoms-list__text">Біль при сечовиділенні</div>
+                    </li>
+
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/water-bottle3.svg);"></div>
+                        <div class="symptoms-list__text">Сильне зневодненняі</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/weakness1.svg);"></div>
+                        <div class="symptoms-list__text">Підвищена слабкість</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/low-temperature1.svg);"></div>
+                        <div class="symptoms-list__text">Підвищена температура</div>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
+        <section class="consequences" style="background-image: url(assets/img/bg112.png);">
+            <div class="section__heading color_white">
+                <h2 class="heading_h1">
+                    Ряд ускладнень, які можуть виникнути
+                    у пацієнтів будь-якого віку і статі
+                </h2>
+            </div>
+            <ul class="consequences-list text_md">
+                <li class="consequences-list__item frosted">
+                    ниркова <br>
+                    недостатність
+                </li>
+                <li class="consequences-list__item frosted">
+                    зараження <br>
+                    крові (сепсис)
+                </li>
+                <li class="consequences-list__item frosted">
+                    гнійне ураження <br>
+                    нирки (карбункул)
+                </li>
+                <li class="consequences-list__item frosted">
+                    гіпертонічні <br>
+                    напади
+                </li>
+                <li class="consequences-list__item frosted">
+                    рубцювання <br>
+                    нирки
+                </li>
+                <li class="consequences-list__item frosted">
+                    ксантогрануломатоз нирки
+                </li>
+            </ul>
+            <div class="block-more-info block-more-info_white text_md hide-info">
+                <p>
+                    Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
+                    постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
+                    років,
+                    жінки будь-якого віку, а також літні чоловіки в віці від 55
+                </p>
+                <p>
+                    Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
+                    Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
+                    пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
+                    при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
+                    схильна до 1 з кожних 10 жінок.
+                </p>
+                <p>
+                    Факторами ризику можуть бути також:
+                </p>
+
+                <ul>
+                    <li>
+                        вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                    </li>
+                    <li>
+                        операції в області сечовидільної системи;
+                    </li>
+                    <li>
+                        установка катетера в сечовий міхур;
+                    </li>
+                    <li>
+                        травма спинного мозку
+                    </li>
+                    <li>
+                        випадання матки;
+                    </li>
+                    <li>
+                        СНІД.
+                    </li>
+                </ul>
+            </div>
+            <div class="wrap-btn">
+                <button class="show-more btn btn_glass">Більше інформації</button>
+            </div>
+        </section>
+        <section class="prevention">
+            <div class="container">
+                <h3 class="prevention__heading heading_xxl">
+                    Заходами профілактики <span class="small">циститу є наступні дії</span>
+                </h3>
+                <div class="prevention__list">
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__text">
+                            Дотримання
+                            правил
+                            гігієни
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                        <div class="prevention__text">
+                            Мінімізувати
+                            вживання алкоголю
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                        <div class="prevention__text">
+                            Правильний раціон
+                            харчування
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon"
+                             style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                        <div class="prevention__text">
+                            Випивати добову
+                            норму води
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__text">
+                            Напівпостільний
+                            режим
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer class="footer">
         <div class="container">
@@ -146,8 +306,8 @@
             </div>
         </div>
         <div class="disclaimer frosted">
-        <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
-        alt="Самолікування може бути шкідливим для вашого здоров'я">
+            <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+                 alt="Самолікування може бути шкідливим для вашого здоров'я">
         </div>
     </footer>
 </div>
