--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -93,30 +93,127 @@
     <main class="main  page">
         <div class="container">
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Пісок <br>
-                    у нирках</h1>
+                <h1 class="page__title h1">Сечокам’яна
+                    хвороба</h1>
                 <div class="page__sub-title heading_h4">
-                    це початкова форма нефролітіазу, або сечокам’яної хвороби
+                    це відкладення в відділах сечовидільної системи різних ущільнень,
+                    які називають камінням.
                 </div>
             </div>
-            <ul class="symptoms-list">
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon"
-                         style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
-                    <div class="symptoms-list__text">Ниркова колька - різкий біль</div>
-                </li>
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon"
-                         style="background-image: url(assets/img/svg/nausea1.svg);"></div>
-                    <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
-                </li>
-                <li class="symptoms-list__item">
-                    <div class="symptoms-list__bg-icon" style="background-image: url(assets/img/svg/urine1.svg);"></div>
-                    <div class="symptoms-list__text">Кров’яні частинки в сечі</div>
-                </li>
-
-            </ul>
         </div>
+        <section class="symptoms">
+            <div class="container">
+                <ul class="symptoms-list">
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
+                        <div class="symptoms-list__text">Ниркова колька - різкий біль</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/nausea1.svg);"></div>
+                        <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/bladder1.svg);"></div>
+                        <div class="symptoms-list__text">Відсутність сечовиділення</div>
+                    </li>
+
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/urine1.svg);"></div>
+                        <div class="symptoms-list__text">Кров’яні частинки в сечі</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/weakness1.svg);"></div>
+                        <div class="symptoms-list__text">Підвищена слабкість</div>
+                    </li>
+                    <li class="symptoms-list__item">
+                        <div class="symptoms-list__bg-icon"
+                             style="background-image: url(assets/img/svg/low-temperature1.svg);"></div>
+                        <div class="symptoms-list__text">Підвищена температура</div>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
+        <section class="consequences" style="background-image: url(assets/img/bg112.png);">
+            <div class="section__heading color_white">
+                <h2 class="heading_h1">
+                    Сечокам'яна хвороба, якщо вчасно не надати допомогу,
+                    може призвести до більш серйозних наслідків:
+                </h2>
+            </div>
+            <ul class="consequences-list text_md">
+                <li class="consequences-list__item frosted">
+                    Проникнення, розвиток
+                    і поширення інфекцій
+                </li>
+                <li class="consequences-list__item frosted">
+                    Пієлонефрит та інші захворювання нирок
+                </li>
+                <li class="consequences-list__item frosted">
+                    Проблеми з кишечником
+                    - зокрема, парез
+                </li>
+                <li class="consequences-list__item frosted">
+                    Скупчення
+                    гнійних утворень
+                </li>
+                <li class="consequences-list__item frosted">
+                    Ниркова <br>
+                    недостатність
+                </li>
+                <li class="consequences-list__item frosted">
+                    Бактеріальний <br>
+                    шок
+                </li>
+            </ul>
+            <div class="block-more-info block-more-info_white text_md hide-info">
+                <p>
+                    Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
+                    постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
+                    років,
+                    жінки будь-якого віку, а також літні чоловіки в віці від 55
+                </p>
+                <p>
+                    Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
+                    Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
+                    пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
+                    при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
+                    схильна до 1 з кожних 10 жінок.
+                </p>
+                <p>
+                    Факторами ризику можуть бути також:
+                </p>
+
+                <ul>
+                    <li>
+                        вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                    </li>
+                    <li>
+                        операції в області сечовидільної системи;
+                    </li>
+                    <li>
+                        установка катетера в сечовий міхур;
+                    </li>
+                    <li>
+                        травма спинного мозку
+                    </li>
+                    <li>
+                        випадання матки;
+                    </li>
+                    <li>
+                        СНІД.
+                    </li>
+                </ul>
+            </div>
+            <div class="wrap-btn">
+                <button class="show-more btn btn_glass">Більше інформації</button>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
